feat: add Vert.x context tooling and event-loop sharing (#45)
* feat: add BlockHound integration module for Vert.x event loops

transactional {} blocks run user code on Vert.x event loop threads, but
BlockHound only inspects threads marked non-blocking and no shipped
integration marks Vert.x's. A test suite that installs BlockHound today
silently skips the very threads this library dispatches onto.

hibernate-reactive-coroutines-blockhound registers a ServiceLoader
BlockHoundIntegration that marks VertxThread event loops (workers and
permitBlockingCalls threads stay exempt) so a plain BlockHound.install()
starts catching blocking calls inside transactional blocks.

One allowance ships with it, found by running a real query under
BlockHound: pg-client's SCRAM auth generates its nonce on the event loop
during connection setup, and SecureRandom reads /dev/urandom to seed it.
Scoped to ScramFunctions#nonce.

E2E coverage runs against Testcontainers PostgreSQL: a clean query must
pass without false positives and Thread.sleep inside transactional {}
must surface BlockingOperationError.

Claude-Session: https://claude.ai/code/session_01XcaReTLMtAYjBxHngshwBn

* feat: own the Vert.x instance and expose it as a Spring bean

Hibernate Reactive's DefaultVertxInstance silently creates a private
Vert.x when nothing is injected, so every application ran a second
event loop pool it could neither see, configure, nor share.

The starter now builds the Vert.x instance itself, exposes it as a
Vertx bean, and hands it to Hibernate Reactive through the supported
VertxInstance service (ProvidedVertxInstance). A user-defined Vertx
bean takes precedence via @ConditionalOnMissingBean, letting the whole
application share one instance. The session factory depends on the
bean, so Spring closes them in the right order.

New spring.jpa.properties.hibernate.reactive.vertx.* settings surface
event loop pool size and the built-in blocked-thread checker knobs
(max-event-loop-execute-time, blocked-th